<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickReturn"
        android:text="Back"
        app:layout_constraintEnd_toStartOf="@+id/textViewTitle"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/how_to_use_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="409dp"
        android:layout_height="599dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="3sp"
            android:layout_marginRight="3sp"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:id="@+id/textViewAddingHabit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="3sp"
                    android:text="@string/how_to_use_adding_habit"
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/imageViewPlusIcon"
                    android:layout_width="253dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="3sp"
                    tools:srcCompat="@drawable/plus_icon">

                </ImageView>
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textViewAddHabitDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3sp"
                    android:text="@string/how_to_use_adding_habit_description"></TextView>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/imageViewAddingHabitView"
                    android:layout_width="354dp"
                    android:layout_height="160dp"
                    android:layout_marginBottom="3sp"
                    app:srcCompat="@drawable/add_habit">

                </ImageView>
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textViewHabitDetails"
                    android:layout_marginBottom="3sp"
                    android:text="@string/how_to_use_habit_details"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textViewHabitDetailsDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3sp"
                    android:text="@string/how_to_use_habit_details_description"></TextView>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/imageViewHabitDetails"
                    android:layout_width="325dp"
                    android:layout_height="188dp"
                    android:layout_marginBottom="3sp"
                    app:srcCompat="@drawable/habit_details">

                </ImageView>
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textViewDailyActions"
                    android:layout_marginBottom="3sp"
                    android:text="@string/how_to_use_daily_actions"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textViewDailyActionsDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3sp"
                    android:text="@string/how_to_use_daily_actions_details">

                </TextView>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/imageViewDailyActions"
                    app:srcCompat="@drawable/habit_checked">

                </ImageView>
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textViewLvlRewards"
                    android:layout_marginBottom="3sp"
                    android:text="@string/how_to_use_lvl_rewards"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textViewLvlRewardsDescription"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="3sp"
                    android:text="@string/how_to_use_lvl_rewards_description"></TextView>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/imageViewLvlRewards"
                    android:layout_marginBottom="3sp"
                    app:srcCompat="@drawable/profile_screen">

                </ImageView>
            </TableRow>

            <TableRow>

                <ImageView
                    android:layout_width="272dp"
                    android:layout_height="361dp"
                    app:srcCompat="@drawable/rewards_screen">

                </ImageView>
            </TableRow>


        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>